# ida-strikeout

./: .gitignore  CMakeLists.txt  ida-plugin.json  plugin.cpp  plugin.h  prep-cmake.bat  utils.hpp
.github/workflows/: build.yml  release.yml
test/: cfg_demo1.c
